arm-modules/nsg/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "environment": {
            "type": "string",
            "defaultValue": "d",
            "metadata": {
                "description": "Development environment"
            }
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "Location matches resource group"
            }
        },
        "dataProduct": {
            "type": "string",
            "metadata": {
                "description": "Use Case name"
            }
        },
        "resourceTags": {
            "type": "object"
        },
        "countryCode": {
            "type": "string",
            "defaultValue": "cs",
            "metadata": {
                "description": "country code"
            }
        }
    },
    "functions": [],
    "variables": {
        "adbNetworkSecurityGroupName": "[toLower(concat(parameters('countryCode'),'-',parameters('dataProduct'),'-adb-',parameters('environment'),'-nsg'))]",
        "nsgAdbId": "[resourceId('Microsoft.Network/networkSecurityGroups',variables('adbNetworkSecurityGroupName'))]"
    },
    "resources": [
        {
            "comments": "Deploy NSG for public subnet ADB",
            "type": "Microsoft.Network/networkSecurityGroups",
            "tags": "[parameters('resourceTags')]",
            "apiVersion": "2020-11-01",
            "name": "[variables('adbNetworkSecurityGroupName')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "Microsoft.Databricks-workspace_UseOnly_databricks-worker-to-worker-inbound",
                        "properties": {
                            "description": "Required for worker nodes communication within a cluster.",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-databricks-webapp",
                        "properties": {
                            "description": "Required for workers communication with Databricks Webapp.",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "AzureDatabricks",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql",
                        "properties": {
                            "description": "Required for workers communication with Azure SQL services.",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3306",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "Sql",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Outbound"
                        }
                    },

                    {
                        "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage",
                        "properties": {
                            "description": "Required for workers communication with Azure Storage services.",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "Storage",
                            "access": "Allow",
                            "priority": 102,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound",
                        "properties": {
                            "description": "Required for worker nodes communication within a cluster.",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 103,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub",
                        "properties": {
                            "description": "Required for worker communication with Azure Eventhub services.",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "9093",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "EventHub",
                            "access": "Allow",
                            "priority": 104,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        }
    ],
    "outputs": {
        "nsgAdbId": {
            "type": "string",
            "value": "[variables('nsgAdbId')]"
        }
    }
}
